tests/tooling/fixtures/native/execution/positive/separator_literal_decimal_basic.objc3
module SeparatorLiteralDecimalBasic;

let base = 1_2;

fn main() -> i32 {
  return base + 3_1;
}
