tests/tooling/fixtures/native/execution/negative/compound_assignment_bitshift_missing_rhs.objc3
module CompoundAssignmentBitshiftMissingRhs;

fn main() -> i32 {
  let value = 1;
  value >>= ;
  return value;
}
